--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,12 @@
       </plugin>
     </plugins>
   </build>
+  
+<distributionManagement>
+   <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <name>Snapshot Release</name>
+      <url>http://34.207.66.94:8081/nexus/content/repositories/snapshots</url>
+   </snapshotRepository>
+</distributionManagement>
 </project>
