--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 <distributionManagement>
    <snapshotRepository>
       <id>nexus-snapshots</id>
-      <name>Snapshot Release</name>
+      <name>Snapshot Releases</name>
       <url>http://34.207.66.94:8081/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
 </distributionManagement>
