--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   
 <distributionManagement>
     <repository>
-        <id>releases</id>
+        <id>maven-snapshots</id>
         <url>http://54.167.122.132:8081/repository/maven-snapshots</url>
     </repository>
    <snapshotRepository>
