--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,24 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
-        <configuration>
+        <!--<configuration>
           <source>${jdk.version}</source>
           <target>${jdk.version}</target>
-        </configuration>
+        </configuration>-->
+        <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+   <configuration>
+      <serverId>nexus</serverId>
+      <nexusUrl>http://54.167.122.132:8081/</nexusUrl>
+      <skipStaging>true</skipStaging>
+   </configuration>
       </plugin>
     </plugins>
   </build>
